Fix styles spilling onto page
I realized that I shouldn't use universal CSS selectors so sparingly.

--- a/Project-II-Calculator/calculator/src/App.css
+++ b/Project-II-Calculator/calculator/src/App.css
@@ -3,6 +3,5 @@ html {
 }
 
 * {
-    display: block;
     box-sizing: border-box;
 }
