--- a/Project-II-Calculator/calculator/src/components/Calculator.css
+++ b/Project-II-Calculator/calculator/src/components/Calculator.css
@@ -4,7 +4,7 @@
     width: 45.4rem;
     height: 59.8rem;
     background: #979797;
-    margin: auto;
+    margin: 1.0rem auto;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
